[tool.poetry]
name = "medium-publish"
version = "0.1.0"
description = ""
authors = ["Raphael MANSUY <raphael.mansuy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
click = "^8.1.7"
markdown = "^3.7"
pygithub = "^2.4.0"
load-dotenv = "^0.1.0"
pyperclip = "^1.9.0"
richxerox = "^1.0.1"
markdown2 = "^2.5.0"
bs4 = "^0.0.2"
boto3 = "^1.35.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
medium-publish = "medium_publish.main:main"
